11.0.8
------


11.0.7
------
(RB=982922)
Upgrade to Netty 4.1.6 and remove maxHeaderSize from Http2StreamCodecBuilder

11.0.6
------
(RB=976188)
Improved configurability of GenerateDataTemplateTask.

(RB=972736)
Add restModel jar generation to make gradle plugin consistent with sbt plugin.
Revised ResourceModelEncoder to fallback to ThreadContextClassLoader if idl cannot be located in the Class level class loader (this is needed in for play-on-gradle since the way class loader is setup for play-on-gradle in play, it only guarantees class are reachable via ThreadContextClassLoader).

(RB=975272)
Create new EntityStream when retrying StreamRequest in RetryClient

(RB=981603)
Fixed issue with GenerateDataTemplateTask introduced in 11.0.6

11.0.5
------
(RB=970594)
Fix StreamExecutionCallback.EventLoopConnector race condition.
(RB=973958)
Remove deprecated << operator in PegasusPlugin.
(RB=971445)
Cache DataTemplateUtil.getSchema.

11.0.4
------
(RB=966768)
Fix FileClassNameScanner to ignore hidden dot-files.

11.0.3
------
(RB=959468)
Provide a utility to perform semantic equality comparison for two pegasus objects.

(RB=958964)
Change the quarantine health checking latency to use degrader low latency

11.0.2
------
(RB=956032)
Move schema logic from constructor to method for BatchKVResponse for performance.
Moving the logic around creating the BatchKVResponse schema to the schema() method and pulling some variables into constants for efficiency gains since schema is inaccurate and rarely used in this class.

11.0.1
------
(RB=957811)
Make RestLiDataValidator aware of wilcard for projecting Union members.

11.0.0
-------
Major version bump due to backward incompatible changes introduced in 10.1.13.
(RB=957738)
Add note to BatchEntityResponse explaining the backward incompatible change to DataMap format returned by data() method.

10.1.15  (Note: This version is not backward compatible. See 11.0.0)
-------
(RB=951527)